--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     </head>
     <body>
         <h1>Homepage</h1>
-        <a >Click me!</a>
+            <a href="https://www.theodinproject.com/about" target="_blank">Click me!</a>
+            
+            <a href="./pages/about.html">About</a>
     </body>
 </html>
