--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <body>
         <h1>Homepage</h1>
             <a href="https://www.theodinproject.com/about" target="_blank">Click me!</a>
-            
             <a href="./pages/about.html">About</a>
+            <img src="./images/charlesdeluvio-Mv9hjnEUHR4-unsplash.jpg" 
+            alt="A dog named Charles" width="310" height="310">
     </body>
 </html>
